--- a/static/templates/11_chPass-success.html
+++ b/static/templates/11_chPass-success.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{{template "1_header.html" .}}
 
-</body>
-</html>
+<br>
+<p>
+    Вы успешно изменили пароль
+</p>
+
+{{template "3_footer.html" .}}
