--- a/static/templates/4_index.html
+++ b/static/templates/4_index.html
@@ -1,6 +1,12 @@
 {{template "1_header.html" .}}
 
 <br>
-<p>Выберите пункт меню</p>
+<p>
+    Выберите пункт меню
+</p>
+
+<p>
+    <input type="button" value="Вывести всех" onclick="showAll()">
+</p>
 
 {{template "3_footer.html" .}}
