--- a/static/templates/7_auth.html
+++ b/static/templates/7_auth.html
@@ -2,15 +2,17 @@
 
 <h3>Регистрация</h3>
 
-<form class="form col-sm-6" method="post" action="/">
-    <p>Введите логин:  <input class="form-control" type="text" id="username" value="logg"></p>
-    <p>Введите пароль:  <input class="form-control" type="text" id="password" value="parr"></p>
+<form class="form col-sm-6" method="post" action="/user/auth">
+    <p>Введите логин:  <input class="form-control" type="text" id="username" name="username" value="logg"></p>
+    <p>Введите пароль:  <input class="form-control" type="text" id="password" name="password" value="parr"></p>
     <p>
-        <input class="btn btn-primary" type="button" id="regBtn"
-               value="Войти" onclick="clickAuth()">
+        <input class="btn btn-primary" type="submit" id="authBtn"
+               value="Войти">
     </p>
 </form>
 
-<p class="hidden alert alert-danger col-sm-6" id="error"></p>
+{{if .Error}}
+    <p class="alert alert-danger col-sm-6" id="error">Неверный логин или пароль</p>
+{{end}}
 
 {{template "3_footer.html" .}}
