--- a/static/templates/4_index.html
+++ b/static/templates/4_index.html
@@ -6,7 +6,7 @@
 </p>
 
 <p>
-    <input type="button" value="Вывести всех" onclick="showAll()">
+    <input type="button" value="Вывести всех">
 </p>
 
 {{template "3_footer.html" .}}
